[gd_scene load_steps=9 format=3 uid="uid://d16o63s23utck"]

[ext_resource type="Script" uid="uid://bdekectr7lnpr" path="res://entities/frog/frog.gd" id="1_udvsd"]
[ext_resource type="Script" uid="uid://wvthhxshywf7" path="res://common/destruct/destructible_2d.gd" id="2_tqehi"]
[ext_resource type="Texture2D" uid="uid://d1038v42c3gfi" path="res://entities/frog/frog_spritsheet.png" id="2_x5vxf"]
[ext_resource type="Script" uid="uid://blkxx5b1jgcyn" path="res://common/platform/platform_detector.gd" id="3_ecp8e"]
[ext_resource type="Script" uid="uid://cxpvf63t11bbu" path="res://entities/lilypad/lilypad_detector.gd" id="3_jtj10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_182fg"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg5n1"]
size = Vector2(6, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtj10"]
size = Vector2(6, 5)

[node name="Frog" type="Node2D"]
script = ExtResource("1_udvsd")

[node name="Destructable2D" type="Area2D" parent="."]
script = ExtResource("2_tqehi")
metadata/_custom_type_script = "uid://wvthhxshywf7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destructable2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_182fg")

[node name="LilypadDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_jtj10")
metadata/_custom_type_script = "uid://cxpvf63t11bbu"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LilypadDetector"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_rg5n1")

[node name="PlatformDetector" type="Area2D" parent="." node_paths=PackedStringArray("root_node")]
script = ExtResource("3_ecp8e")
root_node = NodePath("..")
metadata/_custom_type_script = "uid://blkxx5b1jgcyn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformDetector"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jtj10")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="sprite_2d_parent" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="sprite_2d_parent"]
rotation = 1.5708
texture = ExtResource("2_x5vxf")
hframes = 2
region_rect = Rect2(0, 0, 16, 16)
